Fixed slider. Added media queries

--- a/frontend/web/uw/sass/timeline.scss
+++ b/frontend/web/uw/sass/timeline.scss
@@ -1,3 +1,7 @@
+.wrap {
+	overflow-x: hidden;
+}
+
 .timeline {
 	font-family: "Proxima Nova";
 	color: #010211;
@@ -9,7 +13,7 @@
 	h1 {
 		text-align: center;
 		font-size: 40px;
-		color: #010211;
+		color: #fff;
 		text-transform: uppercase;
 		margin-top: 73px;
 		margin-bottom: 19px;
@@ -25,7 +29,7 @@
     .sliderbox {
 		position: relative;
 		display: flex;
-    	flex-direction: row;
+		flex-direction: row;
 		 -webkit-transition: margin-left 1s ease-out;
 		       -moz-transition: margin-left 1s ease-out;
 		         -o-transition: margin-left 1s ease-out;
@@ -41,6 +45,7 @@
 					line-height: 24px;	
 				}
 			}
+
 			&.active > .date {
 				padding-top: 0px;
 			}
@@ -57,14 +62,14 @@
 			.description {
 		    	margin: 0 100px 0 0;
 				width: 510px;
-				height: 500px;
+				height: 450px;
 				background: #fff;
 
 				.dot {
 					position: absolute;
     				background-color: #fff;
     				border: 3px solid #dbc8ae;
-    				border-radius: 18px;
+    				border-radius: 50%;
     				height: 26px;
     				width: 26px;
     				margin: -13px 0 0 15px;					
@@ -85,14 +90,15 @@
 
 				.circle {
 					opacity: 0;
-					transition: opacity 2.1s ease-out;					
+					transition: opacity 2s ease-out;					
 					pointer-events: none;
+					width: 0;
+					height: 0;
 				}
 
 				.active {
 					pointer-events: unset;
 					opacity: 1;
-					display: block;
 					position: absolute;
 					top: 75%;
 					border: 2px solid #dbc8ae;
@@ -127,19 +133,224 @@
 						}
 					}
 				}
-
 			}
-		}
 
-		.item:first-child {
-			margin-left: 335px;
+			@media screen and (min-width: 1366px) and (max-width: 1599px) {
+				.date {
+					padding: 25.5px 0 0 25.5px;
+					height: 85px;
+					.date-item {
+						font-size: 15.3px;
+						line-height: 20.4px;	
+					}
+				}
+
+				&.active > .date {
+					padding-top: 10px;
+				}
 			
+				&.active > .date > .date-item {
+					font-size: 34px;
+					line-height: 34px;
+				}
+			
+				.description {
+		    		margin: 0 85px 0 0;
+					width: 433.5px;
+					height: 382.5px;
+
+					.dot {
+    					border: 2.55px solid #dbc8ae;						
+    					height: 22.1px;
+    					width: 22.1px;
+    					margin: -12px 0 0 12.75px;					
+					}
+
+					.dot + p {
+						padding-top: 34px;
+						padding-bottom: 16px;
+					}
+
+					p {
+					    font-size: 16px;
+					    line-height: 26px;
+						padding: 0 26px;
+					}
+
+					.active {
+						font-size: 18px;
+						line-height: 42px;
+						height: 106.25px;
+						width: 106.25px;
+
+						&.fl {
+							margin-left: -55.25px;
+						}
+
+						&.fr {
+							margin-left: 378.25px;
+						}
+
+						.prev, .next {
+							height: 42.5px;
+							width: 42.5px;
+							margin: 29.75px;
+						}
+					}
+				}
+			}
+
+			@media screen and (min-width: 1280px) and (max-width: 1365px) {
+				.date {
+					padding: 22.5px 0 0 22.5px;
+					height: 75px;
+					.date-item {
+						font-size: 13.5px;
+						line-height: 18px;	
+					}
+				}
+
+				&.active > .date {
+					padding-top: 5px;
+				}
+			
+				&.active > .date > .date-item {
+					font-size: 30px;
+					line-height: 30px;
+				}
+
+				.description {
+		    		margin: 0 75px 0 0;
+					width: 382.5px;
+					height: 337.5px;
+
+					.dot {
+    					border: 2.25px solid #dbc8ae;
+    					height: 19.5px;
+    					width: 19.5px;
+    					margin: -11px 0 0 11.25px;					
+					}
+
+					.dot + p {
+						padding-top: 30px;
+						padding-bottom: 15px;
+					}
+
+					p {
+					    font-size: 13.5px;
+					    line-height: 22.5px;
+						padding: 0 22.5px;
+					}
+
+					.active {
+						font-size: 15px;
+						line-height: 37.5px;
+						height: 93.75px;
+						width: 93.75px;
+
+						&.fl {
+							margin-left: -48.75px;
+						}
+
+						&.fr {
+							margin-left: 333.75px;
+						}
+
+						.prev, .next {
+							height: 37.5px;
+							width: 37.5px;
+							margin: 26.25px;
+						}
+					}
+				}
+			}
+
+			@media screen and (min-width: 768px) and (max-width: 1279px){
+				.date {
+					padding: 21px 0 0 21px;
+					height: 70px;
+					.date-item {
+						font-size: 12.6px;
+						line-height: 16.8px;	
+					}
+				}
+
+				&.active > .date {
+					padding-top: 2.5px;
+				}
+			
+				&.active > .date > .date-item {
+					font-size: 28px;
+					line-height: 28px;
+				}
+
+				.description {
+		    		margin: 0 70px 0 0;
+					width: 357px;
+					height: 315px;
+
+					.dot {
+    					border: 2.1px solid #dbc8ae;
+    					height: 18.2px;
+    					width: 18.2px;
+    					margin: -10px 0 0 10.5px;					
+					}
+
+					.dot + p {
+						padding-top: 28px;
+						padding-bottom: 14px;
+					}
+
+					p {
+					    font-size: 12.6px;
+					    line-height: 21px;
+						padding: 0 21px;
+					}
+
+					.active {
+						border: 1.4px solid #dbc8ae;
+						font-size: 14px;
+						line-height: 35px;
+						height: 87.5px;
+						width: 87.5px;
+
+						&.fl {
+							margin-left: -45.5px;
+						}
+
+						&.fr {
+							margin-left: 311.5px;
+						}
+
+						.prev, .next {
+							height: 35px;
+							width: 35px;
+							margin: 24.5px;
+						}
+					}
+				}
+			}
 		}
 
 		.item:last-child {
 			.hr {
 			    width: 510px;
 			}
+			@media screen and (min-width: 1366px) and (max-width: 1599px) {
+				.hr {
+					width: 433.5px;	
+				}			
+			}			
+			@media screen and (min-width: 1280px) and (max-width: 1365px) {
+				.hr {
+					width: 382.5px;	
+				}			
+			}			
+			@media screen and (min-width: 768px) and (max-width:1279px) {
+				.hr {
+					width: 357px;	
+				}			
+			}			
 		}
 	}
 	
